# yondaime-hokage

./: .all-contributorsrc  .deepsource.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Hi.py  LICENSE  Pipfile  Procfile  README.md  SECURITY.md  bot.py  discordbot.py  example.env  example.ini  launcher.py  manage-production.py  manage.py  nohup.out  pyproject.toml  requirements-local-windows.txt  requirements-production.txt  requirements.min.txt  requirements.txt  setup.sh  sgdagdag.txt  sider.yml  tags.py  users.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: .yml  CODEOWNERS  FUNDING.yml  config.yml  labeler.yml
.github/requirements/: requirements-generator.py  requirements.txt
.github/workflows/: checkmarx-analysis.yml  codacy-analysis.yml  codeql-analysis.yml  contributors.yml  crunch42-analysis.yml  devskim-analysis.yml  greetings.yml  lint.yml  ossar-analysis.yml  pylint.yml  python-app.yml  stale.yml  veracode-analysis.yml
account/: forms.py  urls.py  views.py
account/templates/: login.html
bot/: settings.py  urls.py  wsgi.py
botmain/: admin.py  apps.py  change_presence.py  discordbot.py  help.py  main.py  models.py  views.py  wsgi.py
botmain/bot/: discordbot.py  help.py  images_list.txt  utils_dis.py  welcome_message.txt
botmain/migrations/: 0001_initial.py  0002_auto_20210215_1703.py  0002_servers_levels.py  0004_webhook.py  (+2 more)
dashboard/: urls.py  views.py
discord_auth_data/: admin.py  app_settings.py  apps.py  bot_ipc_connect.py  conf.py  decorators.py  models.py  urls.py  views.py
docs/: CNAME  Makefile  conf.py  giveaway_timer.html  help.md  index.md  index.rst  make.bat  privacy_policy.md  social.md  widgets.html
login/: bot_ipc_connect.py
main/: views.py
minato_namikaze/: Procfile  __init__.py  discordbot.py  manage.py
tokens/: .env
webserver/: app.py
(+711 files in other folders)
