[tool.poetry]
name = "Minato-Namikaze"
version = "0.1.0"
description = ""
authors = ["Dhruvacube <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
appconf = "^0.1.11"
django = "^3.2"
gtts = "^2.2.2"
python-dotenv = "^0.17.0"
aiohttp = "^3.7.4"
discord = "^1.0.1"
dj-database-url = "^0.5.0"
async-cleverbot = "^0.2.2"
django-admin-list-filter-dropdown = "^1.0.3"
wavelink = "^0.9.9"
youtube-dl = "^2021.4.17"
requests-oauthlib = "^1.3.0"
sentry-sdk = "^1.0.0"
async-timeout = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
