[tool.poetry]
name = "yondaime-hokage"
version = "0.1.0"
description = ""
authors = ["Dhruvacube <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
async-cleverbot = "^0.2.2"
asgiref = "^3.3.4"
Django = "^3.2"
aiozaneapi = "^1.6"
asyncdagpi = "^3.3.2"
buttons = "^0.1.9"
click = "^7.1.2"
Cogs = "^0.4.4"
discord = "^1.0.1"
"discord.py" = "^1.7.1"
discord-ext-menus = "^1.0"
discord-ext-ipc = "^2.0.0"
discord-ext-slash = "^0.5.1"
discord-py-slash-command = "^1.1.2"
DiscordUtils = "^1.2.9"
dj-database-url = "^0.5.0"
django-admin-list-filter-dropdown = "^1.0.3"
ffmpeg = "^1.4"
Google-Images-Search = "^1.3.8"
gTTS = "^2.2.2"
requests = "^2.25.1"
"mystbin.py" = "^2.0.1"
oauthlib = "^3.1.0"
Pillow = "^8.2.0"
python-dateutil = "^2.8.1"
python-dotenv = "^0.17.0"
six = "^1.15.0"
requests-oauthlib = "^1.3.0"
sentry-sdk = "^1.0.0"
"statcord.py" = "^3.0.9"
spotify = "^0.10.2"
youtube_dl = "^2021.4.17"
youtube-search = "^2.1.0"
discord-pretty-help = "^1.3.0"
discord-ext-owoify = "^0.0.2"
replit = "^3.0.0"
wavelink = "^0.9.9"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
